--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@
 .idea/vcs.xml
 .idea/runConfigurations.xml
 .idea/tasks.xml
+.idea/sonarlint/sonarlint.xml
+.idea/sonarlint/issuestore.xml
+.idea/sonarlint/issuestore/*
 
